# user_service/app/views.py
@@ -1,35 +1,51 @@
-# import aiohttp_jinja2
-from datetime import datetime
 from aiohttp import web
-from aiohttp_swagger import swagger_path
-import json
-from datetime import datetime
+from datetime import datetime, timedelta
 import sqlalchemy as sa
-from argon2 import PasswordHasher
+import argon2 as argon
 from .model import Users
-from aiohttp_session import get_session, new_session
 from jose import jwt
+import jose
 from functools import wraps
-import os
-
 import uuid
 
 
 def auth(f):
     @wraps(f)
-    async def  wrapper(*args, **kwds):
-        print('Calling decorated function')
+    async def wrapper(*args, **kwds):
+
         inst = args[0]
-        body_dict = await inst.request.json()
+
+        # get access token
+        header_auth = inst.request.headers["Authorization"]
+
+        if "Bearer" in header_auth:
+            access_token = header_auth.split(" ")[1]
+        else:
+            return web.json_response({"response": "no auth"})
+
+        # unpack JWT
+        try:
+            access_token_jwt = jwt.decode(
+                access_token,
+                "todo:implement to env"
+            )
+        except jose.exceptions.JWTError:
+            return web.json_response({"response": "no valid atoken"})
+
+        # get access token from redis
         redis = await inst.request.app["redis_pool"]
 
-        try:
-            if not await redis.exists(body_dict["atoken"]):
-                return web.json_response({"response": "no valid atoken"})
-        except:
-            return web.json_response({"response": "f'kd body"})
+        if not await redis.exists(access_token_jwt["uuid"]):
+            return web.json_response({"response": "no valid atoken"})
 
-        return await f(*args, **kwds)
+        redis_row = await redis.get(access_token_jwt["uuid"])
+        access_token_redis = redis_row.decode("utf-8").split(" ")[0]
+
+        if access_token != access_token_redis:
+            return web.json_response({"response": "no valid atoken"})
+
+        return await f(*args, access_token_jwt, **kwds)
+
     return wrapper
 
 
@@ -37,14 +53,13 @@ class RegView(web.View):
 
     async def post(self):
         body_dict = await self.request.json()
-        if not "username" in body_dict or \
-            not "password" in body_dict or \
-            not "email" in body_dict:
+        if "username" not in body_dict \
+                or "password" not in body_dict \
+                or "email" not in body_dict:
+            return web.json_response({"resp": "reg user fail"})
 
-            return web.json_response({"code":"400", "resp": "reg user fail"})
-
-        argon2 = PasswordHasher()
-        password = argon2.hash(body_dict["password"])
+        ph = argon.PasswordHasher()
+        password = ph.hash(body_dict["password"])
 
         body_dict['uuid'] = str(uuid.uuid4())
         body_dict['password'] = password
@@ -52,7 +67,7 @@ class RegView(web.View):
         async with self.request.app["database_pool"].acquire() as conn:
             await conn.execute(sa.insert(Users).values(**body_dict))
 
-        return web.json_response({"code": "201", "resp": f"add user {body_dict['username']}"})
+        return web.json_response({"resp": f"add user {body_dict['username']}"})
 
 
 class LogInView(web.View):
@@ -66,159 +81,136 @@ class LogInView(web.View):
 
             if user is not None:
                 pass_crypt = user["password"]
-                argon2 = PasswordHasher()
+                ph = argon.PasswordHasher()
 
                 try:
-                    argon2.verify(pass_crypt, body_dict["password"])
-                except:
-                    return web.json_response({"result":"wrong password"})
+                    ph.verify(pass_crypt, body_dict["password"])
+                except argon.exceptions.VerifyMismatchError:
+                    return web.json_response({"resp": "wrong password"})
 
-                a_tocken = jwt.encode(
+                a_token = jwt.encode(
                     {
-                        "user": body_dict['username']
+                        "username": body_dict['username'],
+                        "exp": datetime.now() + timedelta(minutes=15),
+                        "uuid": user["uuid"]
                     },
                     "todo:implement to env")
-                r_tocken = jwt.encode(
+                r_token = jwt.encode(
                     {
-                        "user": body_dict['username'],
-                        "exp": datetime.now()
+                        "username": body_dict['username'],
+                        "exp": datetime.now() + timedelta(minutes=40),
+                        "uuid": user["uuid"]
                     },
                     "todo:implement to env")
-
 
                 redis = self.request.app["redis_pool"]
-                await redis.set(a_tocken, r_tocken)
-                await redis.expire(a_tocken, 120)
+                await redis.set(user["uuid"], " ".join([a_token, r_token]))
+                await redis.expire(user["uuid"], 60 * 40)
 
-                await redis.set(r_tocken, a_tocken)
-                await redis.expire(r_tocken, 240)
+                return web.json_response({"atoken": a_token, "rtoken": r_token})
 
-        return web.json_response({"atoken": a_tocken,"rtoken": r_tocken})
+        return web.json_response({"resp": "login fail"})
 
 
 class LogOutView(web.View):
     @auth
-    async def post(self):
-        print("LogOut valid auth")
-        body_dict = await self.request.json()
+    async def post(self, access_token_jwt):
         redis = await self.request.app["redis_pool"]
-
-        r_tok =  await redis.get(body_dict["atoken"])
-
-        await redis.delete((r_tok).decode("utf-8"))
-        await redis.delete(body_dict["atoken"])
-
-        return web.json_response({"response": "ok"})
+        await redis.delete(access_token_jwt["uuid"])
+        return web.json_response({"resp": "ok"})
 
 
 class UpdateView(web.View):
-
     @auth
-    async def post(self):
+    async def post(self, access_token_jwt):
         body_dict = await self.request.json()
+        username = access_token_jwt["username"]
+        pool = self.request.app["database_pool"]
 
-        # get name from token
+        # gen password hash
+        if "password" in body_dict:
+            ph = argon.PasswordHasher()
+            password = ph.hash(body_dict["password"])
+            body_dict["password"] = password
 
-        a_tok_param = jwt.decode(
-            body_dict["atoken"],
-            "todo:implement to env"
-            )
-        # get user data
-
-        async with self.request.app["database_pool"].acquire() as conn:
-            resp = await conn.fetchrow(
-                sa.select([Users]).where(Users.username == a_tok_param['user']))
-
-            data_dict = {}
-            data_dict[0] = resp[0]
-            data_dict[1] = resp[1]
-            data_dict[2] = resp[1]
-
-        # udate data
-        try:
-            data_dict[0] = body_dict["user"]
-        except:
-            pass
-
-        try:
-            data_dict[1] = body_dict["email"]
-        except:
-            pass
-
-        try:
-            argon2 = PasswordHasher()
-            password = argon2.hash(body_dict["password"])
-            data_dict[2] = password
-        except:
-            pass
-
-        async with self.request.app["database_pool"].acquire() as conn:
-            query = users.update().values(
-                username=data_dict[0],
-                email=data_dict[1],
-                password=data_dict[2]
-            )
+        # update user info
+        async with pool.acquire() as conn:
+            query = sa.update(Users).where(Users.username == username).values(**body_dict)
             await conn.fetchrow(query)
-
-        return web.json_response({"response": "ok"})
+        return web.json_response({"resp": "update ok"})
 
 
 class InfoView(web.View):
     @auth
-    async def post(self):
-        body_dict = await self.request.json()
-
-        a_tok_param = jwt.decode(
-            body_dict["atoken"],
-            "todo:implement to env"
-        )
-
-        async with self.request.app["database_pool"].acquire() as conn:
+    async def get(self, access_token_jwt):
+        pool = self.request.app["database_pool"]
+        username = access_token_jwt["username"]
+        async with pool.acquire() as conn:
             resp = await conn.fetchrow(
-                sa.select([Users]).where(Users.username == a_tok_param['user']))
-
-        return web.json_response({"response":"ok","username":resp['username'],"email":resp['email']})
+                sa.select([Users]).where(Users.username == username))
+        return web.json_response({"response": "ok", "username": resp['username'], "email": resp['email']})
 
 
 class RefreshView(web.View):
-
     async def post(self):
         body_dict = await self.request.json()
         redis = await self.request.app["redis_pool"]
 
-        if not await redis.exists(body_dict["rtoken"]):
-            return web.json_response({"response": "no valid rtoken"})
+        try:
+            r_token = body_dict['rtoken']
+        except KeyError:
+            return web.json_response({"response": "no rtoken"})
 
-        r_tok = await redis.get(body_dict["rtoken"])
-        a_tok = await redis.get(r_tok.decode("utf-8"))
+        # get access token
+        header_auth = self.request.headers["Authorization"]
 
-        # delete
-        await redis.delete(r_tok)
-        await redis.delete(a_tok)
+        if "Bearer" in header_auth:
+            a_token = header_auth.split(" ")[1]
+        else:
+            return web.json_response({"response": "no auth"})
+
+        # unpack refresh JWT
+        try:
+            r_token_jwt = jwt.decode(
+                r_token,
+                "todo:implement to env"
+            )
+        except jose.exceptions.JWTError:
+            return web.json_response({"response": "no valid atoken"})
+
+        # get tokens from redis
+        user_uuid = r_token_jwt["uuid"]
+        if not await redis.exists(user_uuid):
+            return web.json_response({"response": "no valid tokens"})
+        redis_row = await redis.get(user_uuid)
+        a_token_redis, r_token_redis = redis_row.decode("utf-8").split(" ")
+
+        # validate
+        if r_token_redis != r_token and a_token_redis != a_token:
+            return web.json_response({"response": "no valid tokens"})
+
+        # maybe hack? delete tokens
+        if (r_token_redis != r_token) != (a_token_redis != a_token):
+            await redis.delete(user_uuid)
+            return web.json_response({"response": "no valid tokens"})
 
         # create new tokens
-
-        r_tok_param = jwt.decode(
-            r_tok,
-            "todo:implement to env"
-        )
-
-        a_tocken = jwt.encode(
+        a_token = jwt.encode(
             {
-                "user": r_tok_param["user"]
+                "username": r_token_jwt['username'],
+                "exp": datetime.now() + timedelta(minutes=15),
+                "uuid": user_uuid
             },
             "todo:implement to env")
-        r_tocken = jwt.encode(
+        r_token = jwt.encode(
             {
-                "user": r_tok_param["user"],
-                "exp": datetime.now()
+                "username": r_token_jwt['username'],
+                "exp": datetime.now() + timedelta(minutes=40),
+                "uuid": user_uuid
             },
             "todo:implement to env")
 
-        await redis.set(a_tocken, r_tocken)
-        await redis.expire(a_tocken, 120)
+        await redis.set(user_uuid, " ".join([a_token, r_token]))
+        await redis.expire(user_uuid, 60 * 40)
 
-        await redis.set(r_tocken, a_tocken)
-        await redis.expire(r_tocken, 240)
-
-        return web.json_response({"atoken": a_tocken,"rtoken": r_tocken})
+        return web.json_response({"atoken": a_token, "rtoken": r_token})
